--- a/test/fixtures/car_brands.yml
+++ b/test/fixtures/car_brands.yml
@@ -1,3 +1,13 @@
+# == Schema Information
+#
+# Table name: car_brands
+#
+#  id         :integer          not null, primary key
+#  brand      :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
