--- a/test/fixtures/car_models.yml
+++ b/test/fixtures/car_models.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: car_models
+#
+#  id           :integer          not null, primary key
+#  car_model    :string(255)
+#  created_at   :datetime
+#  updated_at   :datetime
+#  car_brand_id :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
