--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: locations
+#
+#  id         :integer          not null, primary key
+#  city_id    :integer
+#  address    :string(255)
+#  latitude   :float
+#  longitude  :float
+#  user_id    :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
