--- a/test/fixtures/vehicles.yml
+++ b/test/fixtures/vehicles.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: vehicles
+#
+#  id           :integer          not null, primary key
+#  plate        :string(255)
+#  car_model_id :integer
+#  color        :string(255)
+#  created_at   :datetime
+#  updated_at   :datetime
+#  car_brand_id :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
